--- a/styles.css
+++ b/styles.css
@@ -52,6 +52,9 @@ body, ul, p, h1, button{
     width: auto;
     height: 50.8px; 
 }
+.header__link-logo:active{
+    -webkit-tap-highlight-color: transparent;
+}
 .header__actions{
     display: flex;
     flex-flow: row nowrap;
@@ -203,6 +206,7 @@ body, ul, p, h1, button{
 }
 .navigation-list__link:active{
     color: #7E7E82;
+    -webkit-tap-highlight-color: transparent;
 }
 .navigation-list__item:first-of-type{
     margin-left: 16px;
@@ -253,6 +257,207 @@ body, ul, p, h1, button{
 .about__expand-img{
     margin-right: 16px;
 }
+
+/************************************************************************************************/
+
+.menu-inner{
+    min-width: 320px;
+    max-width: 320px;
+    height: auto;
+}
+.menu-header{
+    width: 320px;
+    height: 87px;
+    border-bottom: none;
+}
+.menu-header__inner{
+    justify-content: flex-start;
+    width: 272px;
+    height: 51px;
+}
+.menu-header__burger{
+    margin-right: 16.7px;
+}
+.menu-header__link-logo{
+    margin-right: 78.7px;
+}
+.menu-header__search{
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+
+    width: 40px;
+    height: 40px;
+
+    border: none;
+    background: none;
+}
+
+.menu-actions{
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: flex-start;
+    align-items: flex-start;
+
+    margin-top: 22px;
+    margin-bottom: 268px;
+    width: 320px;
+    height: auto;
+}
+.menu-actions__action{
+    margin-bottom: 32px;
+    width: 320px;
+    height: auto;
+    list-style: none;
+}
+.menu-actions__link{
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+
+    margin-left: 24px;
+    width: max-content;
+    height: 24px;
+
+    text-shadow: 0 0 0.5px #1B1C21;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: -0.2px;
+    color: #1B1C21;
+    text-decoration: none;
+}
+.menu-actions__link--active{
+    margin-left: 0px;
+    width: max-content;
+    height: 32px;
+
+    text-shadow: none;
+    color: #7E7E82; 
+}
+.menu-actions__link--active::before{
+    margin-right: 20px;
+    padding-left: 4px;
+    border-radius: 5px;
+    width: 4px;
+    height: 32px;
+
+    content: "";
+    background-image: url(images/highlight.svg);
+    background-size: cover;
+}
+.menu-actions__link:link{
+    color: #1B1C21;
+}
+.menu-actions__link:visited{
+    color: #1B1C21;
+    text-decoration: none;
+}
+.menu-actions__link:hover{
+    color: #1B1C21;
+}
+.menu-actions__link:focus{
+    color: #1B1C21;
+}
+.menu-actions__link:active{
+    color: #1B1C21;
+    -webkit-tap-highlight-color: transparent;
+}
+
+.menu-footer{
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: flex-start;
+
+    width: auto;
+    height: 220px;
+}
+.menu-footer__inner{
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: flex-start;
+
+    margin-left: 24px;
+    width: auto;
+    height: 184px;
+}
+.menu-footer__actions{
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: flex-start;
+    align-items: center;
+    
+    width: auto;
+    height: 40px;
+    margin-bottom: 16px;
+}
+.menu-footer__action-button{
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+
+    margin-right: 16px;
+    width: 40px;
+    height: 40px;
+
+    border: none;
+    background: none;
+}
+.menu-footer__action-button:last-child{
+    margin-right: 0;
+}
+.menu-footer__email{
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+
+    width: auto;
+    height: 12px;
+    margin-bottom: 12px;
+
+    font-size: 16px;
+    letter-spacing: -0.2px;
+    color: #1B1C21;
+}
+.menu-footer__phone{
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+    
+    width: auto;
+    height: 40px;
+    margin-bottom: 40px;
+
+    font-family: 'TTLakes-ExtraBold';
+    font-size: 24px;
+    letter-spacing: -0.6px;
+}
+.menu-footer__langs{
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: flex-start;
+    align-items: center;
+
+    width: auto;
+    height: 24px;
+}
+.menu-footer__lang-button{
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+
+    margin-right: 7px;
+    width: 25px;
+    height: 25px;
+
+    font-family: 'TTLakes-Regular';
+    font-size: 16px;
+    letter-spacing: -0.2px;
+    color: #1B1C21;
+    border: none;
+    background: none;
+}
+
 /************************************************************************************************/
 
 @media screen and (min-width: 1px) and (max-width: 767px){
